<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rating"
        android:id="@+id/txtOthers"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addRattingBar"
        android:layout_gravity="center_horizontal"

        android:stepSize="1.0"
        android:isIndicator="false"
        android:progressTint="#1BB5A9"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Review"
        android:id="@+id/textView3"
        android:layout_gravity="center_horizontal"
        android:textSize="25dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_review"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/Review"
            android:focusableInTouchMode="true"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Submit"
        android:id="@+id/submit"
        android:layout_gravity="right"

        android:background="#1BB5A9"/>

</LinearLayout>