<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scrollView"
    android:layout_gravity="center_horizontal"
    android:padding="20dp">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Enter_name"
            android:id="@+id/txtname"
            android:layout_marginTop="5dp"
            android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_name"
                android:layout_gravity="center_horizontal"
                android:hint="@string/Enter_name"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:id="@+id/txtDesc"
            android:layout_marginTop="5dp"
            android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/input_desc"
                android:layout_gravity="center_horizontal"
                android:hint="@string/description"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Location"
            android:id="@+id/txtLocalization"
            android:layout_marginTop="5dp"
            android:textSize="20sp"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_placePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/placePicker"
                android:layout_gravity="center_horizontal"

                android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtPicker"
            android:layout_gravity="center_horizontal"
            />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/fragLayout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <!-- <fragment
                 android:id="@+id/autocomplete_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                 android:layout_above="@+id/public_checkbox"
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"

                 />-->

        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pinner"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/ic_launcher"
            android:layout_marginTop="5dp"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Public"
            android:id="@+id/public_checkbox"
            android:layout_marginTop="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Submit"
            android:id="@+id/systemSubmit"
            android:layout_gravity="right"
            android:background="#1BB5A9"
            android:layout_marginTop="20dp"/>

    </LinearLayout>
</ScrollView>